Set meta column widths to prevent layout broken

--- a/css/edit.css
+++ b/css/edit.css
@@ -1,3 +1,15 @@
+/* Column width */
+.column-meta_title.column-meta_title {
+	width: 8%;
+}
+.column-meta_description.column-meta_description {
+	width: 12%;
+}
+.column-noindex.column-noindex {
+	width: 48px;
+	text-align: center;
+}
+
 /* Status icon */
 .ss-success:after,
 .ss-warning:after,
@@ -22,8 +34,4 @@
 .ss-danger:after {
 	content: "\2717";
 	background: #e53e3e;
-}
-
-.column-noindex.column-noindex {
-	text-align: center;
 }
